2007-09-26  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_set_state):
	* lib/totem-scrsaver.c: (totem_scrsaver_disable),
	(totem_scrsaver_enable), (totem_scrsaver_set_state):
	Fix crash when there's no screensaver objects, and add assertion
	guards in totem-scrsaver.c (Closes: #480558)

2007-09-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add audio/x-vorbis as used in
	http://www.play.cz/radio-7

2007-09-23  Bastien Nocera  <hadess@hadess.net>

	* src/totem-fullscreen.c: (totem_fullscreen_parent_window_notify):
	When an error occurs and we dismiss the error dialogue, don't hide
	the cursor if we're not in fullscreen
	* src/totem.c: (totem_action_seek), (seek_slider_released_cb):
	When a seek error occurs, reset the seeking so that the interface
	is ready to use again

2007-09-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem-fullscreen.c: (totem_fullscreen_set_cursor),
	(totem_fullscreen_motion_notify),
	(totem_fullscreen_parent_window_notify), (totem_fullscreen_new):
	Only show the popup on motion notifies if the window is active, show
	the cursor on the video window when it's not active, or when it becomes
	active, includes patch from bug #439269 (Closes: #471381)

2007-09-19  Bastien Nocera  <hadess@hadess.net>

	* data/fullscreen.ui:
	* src/totem-fullscreen.c: (totem_fullscreen_popup_timeout_add),
	(totem_fullscreen_is_volume_popup_visible),
	(totem_fullscreen_force_popup_hide), (totem_fullscreen_popup_hide),
	(totem_fullscreen_set_fullscreen), (totem_fullscreen_new):
	Remove the vol_lock, and check whether the popup is visible instead
	Force the volume scale to popdown when going out of fullscreen
	(Closes: #477529, #452245)

============ Version 2.20.0

2007-09-16  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.20.0

2007-09-05  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (totem_cd_detect_type_with_url):